Add Fira code as font for macos branch.

--- a/alacritty.yml
+++ b/alacritty.yml
@@ -51,16 +51,16 @@ colors:
   indexed_colors: []
 font:
   normal:
-    family: Hack Nerd Font Mono
+    family: FuraMono Nerd Font
     style: Regular
   bold:
-    family: Hack Nerd Font Mono
+    family: FuraMono Nerd Font
     style: Bold
   italic:
-    family: Hack Nerd Font Mono
+    family: FuraMono Nerd Font
     style: Italic
   bold_italic:
-    family: Hack Nerd Font Mono
+    family: FuraMono Nerd Font
     style: Bold Italic
   size: 18
   offset:
