--- a/alacritty.yml
+++ b/alacritty.yml
@@ -49,16 +49,16 @@ colors:
   indexed_colors: []
 font:
   normal:
-    family: FuraMono Nerd Font
+    family: FiraMono Nerd Font
     style: Regular
   bold:
-    family: FuraMono Nerd Font
+    family: FiraMono Nerd Font
     style: Bold
   italic:
-    family: FuraMono Nerd Font
+    family: FiraMono Nerd Font
     style: Italic
   bold_italic:
-    family: FuraMono Nerd Font
+    family: FiraMono Nerd Font
     style: Bold Italic
   size: 18
   offset:
