Add Doom One theme.

--- a/alacritty.toml
+++ b/alacritty.toml
@@ -2,7 +2,6 @@ live_config_reload = true
 
 [colors]
 draw_bold_text_with_bright_colors = true
-indexed_colors = []
 
 [colors.bright]
 black = "#928374"
@@ -29,20 +28,20 @@ white = "0xe6e6d1"
 yellow = "0xebf85b"
 
 [colors.normal]
-black = "#282828"
-blue = "#458588"
-cyan = "#689d6a"
-green = "#98971a"
-magenta = "#b16286"
-red = "#cc241d"
-white = "#a89984"
-yellow = "#d79921"
+black = "0x282c34"
+blue = "0x51afef"
+cyan = "0x46d9ff"
+green = "0x98be65"
+magenta = "0xc678dd"
+red = "0xff6c6b"
+white = "0xbbc2cf"
+yellow = "0xecbe7b"
 
 [colors.primary]
-background = "#282828"
+background = "0x282c34"
 bright_foreground = "#d9d9d9"
 dim_foreground = "#dbdbdb"
-foreground = "#ebdbb2"
+foreground = "0xbbc2cf"
 
 [colors.selection]
 background = "0x44475a"
