--- a/alacritty.yml
+++ b/alacritty.yml
@@ -8,21 +8,21 @@ shell:
       "$(/Users/typesarespaces/.config/tmux/scripts/tmux-session-number)"
 colors:
   primary:
-    background: '0x282c34'
-    foreground: '0xbbc2cf'
+    background: '#282828'
+    foreground: '#ebdbb2'
     dim_foreground: '#dbdbdb'
     bright_foreground: '#d9d9d9'
     dim_background: '#202020'
     bright_background: '#3a3a3a'
   normal:
-    black: '0x282c34'
-    red: '0xff6c6b'
-    green: '0x98be65'
-    yellow: '0xecbe7b'
-    blue: '0x51afef'
-    magenta: '0xc678dd'
-    cyan: '0x46d9ff'
-    white: '0xbbc2cf'
+    black: '#282828'
+    red: '#cc241d'
+    green: '#98971a'
+    yellow: '#d79921'
+    blue: '#458588'
+    magenta: '#b16286'
+    cyan: '#689d6a'
+    white: '#a89984'
   bright:
     black: '#928374'
     red: '#fb4934'
